// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentHomePageComponent should snap when courses are still loading 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading={[Function Boolean]}
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
    
    
    
    
    
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap when there is course loading failed 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasCoursesLoadingFailed={[Function Boolean]}
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    
    <div
      class="text-center"
    >
      <p
        class="text-muted m-1"
      >
        Failed to load courses
      </p>
      <button
        class="btn btn-primary"
      >
        <i
          aria-hidden="true"
          class="fas fa-redo"
        />
         Retry
      </button>
    </div>
    
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with all feedback sessions over 2 courses 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    
    
    <div />
    
    
    <div
      class="row mb-2"
    >
      <div
        class="col-12"
      >
        <div
          class="float-right"
        >
          <strong
            class="d-inline"
          >
             Sort By: 
          </strong>
          <div
            class="btn-group"
          >
            <button
              class="btn btn-light"
              id="sort-course-id-btn"
            >
              Course ID
            </button>
            <button
              class="btn btn-light"
              id="sort-course-name-btn"
            >
              Course Name
            </button>
          </div>
        </div>
      </div>
    </div>
    
    
    <div
      class="card bg-light top-padded"
    >
      
      <div
        class="card-header bg-primary text-white"
      >
        <strong>
          [CS1231]: Discrete Structures
        </strong>
        <div
          class="card-header-btn-toolbar"
        >
          <a
            class="btn btn-primary btn-sm button"
            href="/web/student/course?courseid=CS1231"
            id="view-team-btn-0"
            tmrouterlink="/web/student/course"
          >
             View team 
          </a>
        </div>
      </div>
      <div
        class="table-responsive"
      >
        
        <table
          class="table table-striped table-bordered margin-0"
        >
          <thead>
            <tr>
              <th>
                Session Name
              </th>
              <th>
                Deadline
              </th>
              <th>
                Submissions
              </th>
              <th>
                Responses
              </th>
              <th>
                Action(s)
              </th>
            </tr>
          </thead>
          <tbody>
            
            <tr>
              
              <td>
                First Session
              </td>
              
              <td>
                Sat, 02 Feb 2019, 16:15 PM +08
              </td>
              <td>
                <span>
                   Submitted 
                </span>
              </td>
              <td>
                <span>
                   Not Published 
                </span>
              </td>
              <td>
                <a
                  class="btn btn-light btn-sm btn-margin-right disabled"
                  href="/web/student/sessions/result?courseid=CS1231&fsname=First%20Session"
                  id="view-responses-btn-0"
                  tmrouterlink="/web/student/sessions/result"
                >
                   View Responses 
                </a>
                
                
                
                <a
                  class="btn btn-light btn-sm"
                  href="/web/student/sessions/submission?courseid=CS1231&fsname=First%20Session"
                  id="edit-submit-btn-0"
                  tmrouterlink="/web/student/sessions/submission"
                >
                   Edit Submission 
                </a>
                
              </td>
            </tr>
            <tr>
              
              <td>
                Second Session
              </td>
              
              <td>
                Sat, 02 Feb 2019, 16:15 PM +08
              </td>
              <td>
                <span>
                   Closed 
                </span>
              </td>
              <td>
                <span>
                   Not Published 
                </span>
              </td>
              <td>
                <a
                  class="btn btn-light btn-sm btn-margin-right disabled"
                  href="/web/student/sessions/result?courseid=CS1231&fsname=Second%20Session"
                  id="view-responses-btn-1"
                  tmrouterlink="/web/student/sessions/result"
                >
                   View Responses 
                </a>
                
                
                
                
                <a
                  class="btn btn-light btn-sm"
                  href="/web/student/sessions/submission?courseid=CS1231&fsname=Second%20Session"
                  id="view-submit-btn-1"
                  tmrouterlink="/web/student/sessions/submission"
                >
                   View Submission 
                </a>
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    </div>
    
    <div
      class="card bg-light top-padded"
    >
      
      <div
        class="card-header bg-primary text-white"
      >
        <strong>
          [LSM1306]: Forensic Science
        </strong>
        <div
          class="card-header-btn-toolbar"
        >
          <a
            class="btn btn-primary btn-sm button"
            href="/web/student/course?courseid=LSM1306"
            id="view-team-btn-1"
            tmrouterlink="/web/student/course"
          >
             View team 
          </a>
        </div>
      </div>
      <div
        class="table-responsive"
      >
        
        <table
          class="table table-striped table-bordered margin-0"
        >
          <thead>
            <tr>
              <th>
                Session Name
              </th>
              <th>
                Deadline
              </th>
              <th>
                Submissions
              </th>
              <th>
                Responses
              </th>
              <th>
                Action(s)
              </th>
            </tr>
          </thead>
          <tbody>
            
            <tr>
              
              <td>
                Third Session
              </td>
              
              <td>
                Sat, 02 Feb 2019, 16:15 PM +08
              </td>
              <td>
                <span>
                   Submitted 
                </span>
              </td>
              <td>
                <span>
                   Not Published 
                </span>
              </td>
              <td>
                <a
                  class="btn btn-light btn-sm btn-margin-right disabled"
                  href="/web/student/sessions/result?courseid=LSM1306&fsname=Third%20Session"
                  id="view-responses-btn-0"
                  tmrouterlink="/web/student/sessions/result"
                >
                   View Responses 
                </a>
                
                
                
                <a
                  class="btn btn-light btn-sm"
                  href="/web/student/sessions/submission?courseid=LSM1306&fsname=Third%20Session"
                  id="edit-submit-btn-0"
                  tmrouterlink="/web/student/sessions/submission"
                >
                   Edit Submission 
                </a>
                
              </td>
            </tr>
            <tr>
              
              <td>
                Fourth Session
              </td>
              
              <td>
                Sat, 02 Feb 2019, 16:15 PM +08
              </td>
              <td>
                <span>
                   Closed 
                </span>
              </td>
              <td>
                <span>
                   Not Published 
                </span>
              </td>
              <td>
                <a
                  class="btn btn-light btn-sm btn-margin-right disabled"
                  href="/web/student/sessions/result?courseid=LSM1306&fsname=Fourth%20Session"
                  id="view-responses-btn-1"
                  tmrouterlink="/web/student/sessions/result"
                >
                   View Responses 
                </a>
                
                
                
                
                <a
                  class="btn btn-light btn-sm"
                  href="/web/student/sessions/submission?courseid=LSM1306&fsname=Fourth%20Session"
                  id="view-submit-btn-1"
                  tmrouterlink="/web/student/sessions/submission"
                >
                   View Submission 
                </a>
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    </div>
    
    
    
    
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with default fields 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading={[Function Boolean]}
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
    
    
    
    
    
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with feedback sessions 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    
    
    <div />
    
    
    <div
      class="row mb-2"
    >
      <div
        class="col-12"
      >
        <div
          class="float-right"
        >
          <strong
            class="d-inline"
          >
             Sort By: 
          </strong>
          <div
            class="btn-group"
          >
            <button
              class="btn btn-light"
              id="sort-course-id-btn"
            >
              Course ID
            </button>
            <button
              class="btn btn-light"
              id="sort-course-name-btn"
            >
              Course Name
            </button>
          </div>
        </div>
      </div>
    </div>
    
    
    <div
      class="card bg-light top-padded"
    >
      
      <div
        class="card-header bg-primary text-white"
      >
        <strong>
          [CS2103]: Software Engineering
        </strong>
        <div
          class="card-header-btn-toolbar"
        >
          <a
            class="btn btn-primary btn-sm button"
            href="/web/student/course?courseid=CS2103"
            id="view-team-btn-0"
            tmrouterlink="/web/student/course"
          >
             View team 
          </a>
        </div>
      </div>
      <div
        class="table-responsive"
      >
        
        <table
          class="table table-striped table-bordered margin-0"
        >
          <thead>
            <tr>
              <th>
                Session Name
              </th>
              <th>
                Deadline
              </th>
              <th>
                Submissions
              </th>
              <th>
                Responses
              </th>
              <th>
                Action(s)
              </th>
            </tr>
          </thead>
          <tbody>
            
            <tr>
              
              <td>
                First Session
              </td>
              
              <td>
                Sat, 02 Feb 2019, 16:15 PM +08
              </td>
              <td>
                <span>
                   Submitted 
                </span>
              </td>
              <td>
                <span>
                   Published 
                </span>
              </td>
              <td>
                <a
                  class="btn btn-light btn-sm btn-margin-right"
                  href="/web/student/sessions/result?courseid=CS2103&fsname=First%20Session"
                  id="view-responses-btn-0"
                  tmrouterlink="/web/student/sessions/result"
                >
                   View Responses 
                </a>
                
                <a
                  class="btn btn-light btn-sm disabled"
                  id="disabled-start-submit-btn-0"
                >
                   Start Submission 
                </a>
                
                
                <a
                  class="btn btn-light btn-sm"
                  href="/web/student/sessions/submission?courseid=CS2103&fsname=First%20Session"
                  id="edit-submit-btn-0"
                  tmrouterlink="/web/student/sessions/submission"
                >
                   Edit Submission 
                </a>
                
              </td>
            </tr>
            <tr>
              
              <td>
                Second Session
              </td>
              
              <td>
                Sat, 02 Feb 2019, 16:15 PM +08
              </td>
              <td>
                <span>
                   Pending 
                </span>
              </td>
              <td>
                <span>
                   Not Published 
                </span>
              </td>
              <td>
                <a
                  class="btn btn-light btn-sm btn-margin-right disabled"
                  href="/web/student/sessions/result?courseid=CS2103&fsname=Second%20Session"
                  id="view-responses-btn-1"
                  tmrouterlink="/web/student/sessions/result"
                >
                   View Responses 
                </a>
                
                
                <a
                  class="btn btn-light btn-sm"
                  href="/web/student/sessions/submission?courseid=CS2103&fsname=Second%20Session"
                  id="start-submit-btn-1"
                  tmrouterlink="/web/student/sessions/submission"
                >
                   Start Submission 
                </a>
                
                
              </td>
            </tr>
          </tbody>
        </table>
        
      </div>
    </div>
    
    
    
    
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with no course 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    
    
    <div />
    
    <div>
       You are not enrolled in any courses. Please refer to the 
      <a
        href="/web/student/help"
        tmrouterlink="/web/student/help"
      >
        help page
      </a>
       if you need more information. 
    </div>
    
    
    
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with no feedback session over 2 courses 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    
    
    <div />
    
    
    <div
      class="row mb-2"
    >
      <div
        class="col-12"
      >
        <div
          class="float-right"
        >
          <strong
            class="d-inline"
          >
             Sort By: 
          </strong>
          <div
            class="btn-group"
          >
            <button
              class="btn btn-light"
              id="sort-course-id-btn"
            >
              Course ID
            </button>
            <button
              class="btn btn-light"
              id="sort-course-name-btn"
            >
              Course Name
            </button>
          </div>
        </div>
      </div>
    </div>
    
    
    <div
      class="card bg-light top-padded"
    >
      
      <div
        class="card-header bg-primary text-white"
      >
        <strong>
          [CS3281]: Thematic Systems I
        </strong>
        <div
          class="card-header-btn-toolbar"
        >
          <a
            class="btn btn-primary btn-sm button"
            href="/web/student/course?courseid=CS3281"
            id="view-team-btn-0"
            tmrouterlink="/web/student/course"
          >
             View team 
          </a>
        </div>
      </div>
      <div
        class="table-responsive"
      >
        
        
        <table
          class="table table-striped table-bordered margin-0"
        >
          <tbody>
            <tr>
              <th
                class="align-center white"
              >
                 Currently, there are no open evaluation/feedback sessions in this course. When a session is open for submission you will be notified. 
              </th>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    
    <div
      class="card bg-light top-padded"
    >
      
      <div
        class="card-header bg-primary text-white"
      >
        <strong>
          [CS3282]: Thematic Systems II
        </strong>
        <div
          class="card-header-btn-toolbar"
        >
          <a
            class="btn btn-primary btn-sm button"
            href="/web/student/course?courseid=CS3282"
            id="view-team-btn-1"
            tmrouterlink="/web/student/course"
          >
             View team 
          </a>
        </div>
      </div>
      <div
        class="table-responsive"
      >
        
        
        <table
          class="table table-striped table-bordered margin-0"
        >
          <tbody>
            <tr>
              <th
                class="align-center white"
              >
                 Currently, there are no open evaluation/feedback sessions in this course. When a session is open for submission you will be notified. 
              </th>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    
    
    
    
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with no feedback sessions 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    
    
    <div />
    
    
    <div
      class="row mb-2"
    >
      <div
        class="col-12"
      >
        <div
          class="float-right"
        >
          <strong
            class="d-inline"
          >
             Sort By: 
          </strong>
          <div
            class="btn-group"
          >
            <button
              class="btn btn-light"
              id="sort-course-id-btn"
            >
              Course ID
            </button>
            <button
              class="btn btn-light"
              id="sort-course-name-btn"
            >
              Course Name
            </button>
          </div>
        </div>
      </div>
    </div>
    
    
    <div
      class="card bg-light top-padded"
    >
      
      <div
        class="card-header bg-primary text-white"
      >
        <strong>
          [CS3281]: Thematic Systems
        </strong>
        <div
          class="card-header-btn-toolbar"
        >
          <a
            class="btn btn-primary btn-sm button"
            href="/web/student/course?courseid=CS3281"
            id="view-team-btn-0"
            tmrouterlink="/web/student/course"
          >
             View team 
          </a>
        </div>
      </div>
      <div
        class="table-responsive"
      >
        
        
        <table
          class="table table-striped table-bordered margin-0"
        >
          <tbody>
            <tr>
              <th
                class="align-center white"
              >
                 Currently, there are no open evaluation/feedback sessions in this course. When a session is open for submission you will be notified. 
              </th>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    
    
    
    
  </tm-loading-retry>
</tm-student-home-page>
`;
